--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,80 +1,158 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
-import Images from "../components/Images.astro";
+import DefaultLayout from "../layouts/DefaultLayout.astro";
+import Hero from "../components/Hero.astro";
+import Feature from "../components/Feature.astro";
 ---
 
-<Layout title="passbox">
-  <main>
-    <h1>Welcome to <span class="text-gradient">Passbox</span></h1>
-    <p class="instructions">
-      🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅
-      <br />
-      - Store encrypted messages
-      <br />
-      - Import/export browser bookmarks
-      <br />
-      - Export the encrypted file and import it to another computer to migrate the
-      data securely
-      <br />
-      - Open a webpage or file with an app/system tray
-      <br />
-      - Use the tool website easily and sweetly
-      <br />
-      - We do not store your password. When you set a password, only you can decrypt
-      it
-      <br />
-      - Drag and drop a file to save the link and name, and supported files can be
-      opened
-      <br />
-      🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅🔅
-    </p>
+<DefaultLayout title="passbox">
+  <Hero />
+  <div
+    class="relative rounded-3xl border border-gray-100 bg-white shadow-2xl shadow-gray-600/20 transition duration-500 dark:border-white/10 dark:bg-gray-900 dark:shadow-none"
+  >
+    <div
+      class="flex flex-col gap-12 divide-y p-12 dark:divide-gray-800 md:flex-row md:divide-y-0 md:divide-x"
+    >
+      <div class="relative md:w-6/12 md:pl-12">
+        <p class="text-gray-700 dark:text-white">
+          Passbox runs locally and does not require the internet. Passbox uses
+          the AES encryption algorithm to encrypt data and then saves it in a
+          local file. The initial password is randomly generated and will be
+          saved to a local file. recommend you set a password so that your
+          password will only exist in the program’s running memory, which is
+          more secure. With Passbox, you can:
+        </p>
+        <ul role="list" class="space-y-4 py-6 text-gray-600 dark:text-gray-300">
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span
+              >Store your sensitive data for easy viewing and modification.</span
+            >
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span
+              >Store your favorite URLs and open them in a clean window.</span
+            >
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span
+              >Store your frequently used file addresses for easy opening.</span
+            >
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>Open URLs or files in the system tray.</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>Use tool websites easily and sweetly.</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>Open URLs or files in the system tray.</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>Drag files to store links and names of files.</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span
+              >Save the exported encrypted file to the cloud for easy
+              synchronization of data between different devices.</span
+            >
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span
+              >You can store cloud disk links in Passbox and open them easily at
+              any time.</span
+            >
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>Import/export as browser bookmarks.</span>
+          </li>
+        </ul>
+      </div>
+      <div class="relative md:w-6/12 md:pl-12">
+        <p class="text-gray-700 dark:text-white" style="line-height: 2;">
+          Passbox 在本地运行，无需互联网。
+          <br />
+          Passbox 使用 AES 加密算法对数据进行加密，然后将其保存在本地文件中。
+          <br />
+          初始密码是随机生成的，会被保存到本地文件。
+          <br />
+          推荐您设置密码，这样您的密码只会存在于程序运行时内存中，更安全。
+          <br />
+          使用 passbox，您可以:
+        </p>
+        <ul role="list" class="space-y-4 py-6 text-gray-600 dark:text-gray-300">
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>存储您的敏感数据，方便快捷地查看和修改。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>存储您收藏的网址，在干净的窗口打开它。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>存储您常用的文件地址，方便您打开。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>在系统托盘中打开网址或文件。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>轻松愉快的使用工具网站。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>拖入文件存储文件的链接和名称。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>把导出的加密文件存入云盘，方便您在不同设备间同步数据。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>您可以把云盘链接存入 passbox，随时方便的打开它。</span>
+          </li>
+          <li class="space-x-2">
+            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
+            <span>导入/导出为浏览器书签。</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <section class="my-12">
+    <div class="container">
+      <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
+        <Feature src="1.png" />
+        <Feature src="2.png" />
+        <Feature src="10.png" />
 
-    <ul role="list" class="link-card-grid">
-      <Card
-        href="https://github.com/zzk13180/passbox/releases"
-        title="Download"
-        body="download from GitHub Releases."
-      />
-    </ul>
-    <p class="instructions" style="padding: 0; margin:0; line-height: 0">
-      <video style="width: 100%; height: 100%" controls src="202304302027.mp4"
-      ></video>
-    </p>
+        <Feature src="4.png" />
+        <Feature src="5.png" />
+        <Feature src="6.png" />
 
-    <ul role="list" class="link-card-grid">
-      <Images body="1.png" />
-      <Images body="2.png" />
-      <Images body="10.png" />
-
-      <Images body="4.png" />
-      <Images body="5.png" />
-      <Images body="6.png" />
-
-      <Images body="7.png" />
-      <Images body="14.png" />
-      <Images body="8.png" />
-    </ul>
-  </main>
-</Layout>
+        <Feature src="7.png" />
+        <Feature src="14.png" />
+        <Feature src="8.png" />
+      </div>
+    </div>
+  </section>
+</DefaultLayout>
 
 <style>
   main {
     margin: auto;
     padding: 1.5rem;
-    max-width: 100ch;
-  }
-  h1 {
-    font-size: 3rem;
-    font-weight: 800;
-    margin: 0;
-  }
-  .text-gradient {
-    background-image: var(--accent-gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-size: 400%;
-    background-position: 0%;
+    max-width: 90ch;
   }
   .instructions {
     line-height: 1.6;
