--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -13,9 +13,11 @@ const { src } = Astro.props;
   @use "../assets/scss/base/breakpoint" as *;
 
   img {
-    width: calc(100% - 6px);
-    height: calc(100% - 6px);
+    width: 100%;
+    height: 100%;
     z-index: 1;
+    border-radius: 1rem;
+    border: 6px solid var(--neutral-100);
   }
 
   .mask {
@@ -25,6 +27,7 @@ const { src } = Astro.props;
     top: 0;
     left: 0;
     z-index: 2;
+    border-radius: 1rem;
     border: 3px solid var(--neutral-100);
   }
 
