--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,13 +13,19 @@ import Feature from "../components/Feature.astro";
       class="flex flex-col gap-12 divide-y p-12 dark:divide-gray-800 md:flex-row md:divide-y-0 md:divide-x"
     >
       <div class="relative md:w-6/12 md:pl-12">
-        <p class="text-gray-700 dark:text-white">
-          Passbox runs locally and does not require the internet. Passbox uses
-          the AES encryption algorithm to encrypt data and then saves it in a
-          local file. The initial password is randomly generated and will be
-          saved to a local file. recommend you set a password so that your
-          password will only exist in the program’s running memory, which is
-          more secure. With Passbox, you can:
+        <p class="text-gray-700 dark:text-white" style="line-height: 2;">
+          Passbox runs locally.
+          <br />
+          Passbox uses the AES encryption algorithm to encrypt data and then saves
+          it in a local file.
+          <br />
+          The initial password is randomly generated and will be saved to a local
+          file.
+          <br />
+          recommends you set a password so that your password will only exist
+          in the program’s running memory, which is more secure.
+          <br />
+          With Passbox, you can:
         </p>
         <ul role="list" class="space-y-4 py-6 text-gray-600 dark:text-gray-300">
           <li class="space-x-2">
@@ -58,10 +64,9 @@ import Feature from "../components/Feature.astro";
           </li>
           <li class="space-x-2">
             <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span
-              >Save the exported encrypted file to the cloud for easy
-              synchronization of data between different devices.</span
-            >
+            <span>
+              Save exported encrypted file to the cloud for data migration
+            </span>
           </li>
           <li class="space-x-2">
             <span class="font-semibold text-primary dark:text-gray-300">✓</span>
@@ -77,7 +82,7 @@ import Feature from "../components/Feature.astro";
         </ul>
       </div>
       <div class="relative md:w-6/12 md:pl-12">
-        <p class="text-gray-700 dark:text-white" style="line-height: 2;">
+        <p class="text-gray-700 dark:text-white" style="line-height: 2.5;">
           Passbox 在本地运行，无需互联网。
           <br />
           Passbox 使用 AES 加密算法对数据进行加密，然后将其保存在本地文件中。
@@ -154,29 +159,13 @@ import Feature from "../components/Feature.astro";
     padding: 1.5rem;
     max-width: 90ch;
   }
-  .instructions {
-    line-height: 1.6;
-    margin: 1rem 0;
-    border: 1px solid rgba(var(--accent), 25%);
-    background-color: white;
-    padding: 1rem;
-    border-radius: 0.4rem;
-  }
-  .instructions code {
-    font-size: 0.875em;
-    font-weight: bold;
-    background: rgba(var(--accent), 12%);
-    color: rgb(var(--accent));
-    border-radius: 4px;
-    padding: 0.3em 0.45em;
-  }
-  .instructions strong {
-    color: rgb(var(--accent));
-  }
   .link-card-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
     gap: 1rem;
     padding: 0;
+  }
+  .text-primary {
+    color: #9333ea;
   }
 </style>
