--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,41 +14,32 @@ import Feature from "../components/Feature.astro";
     >
       <div class="relative md:w-6/12 md:pl-12">
         <p class="text-gray-700 dark:text-white" style="line-height: 2;">
-          Passbox runs locally.
+          Introducing Passbox - the password management software that guarantees
+          complete privacy and security!
           <br />
-          Passbox uses the AES encryption algorithm to encrypt data and then saves
-          it in a local file.
+          With Passbox, you can store your sensitive data without worrying about
+          data breaches or unauthorized access. Passbox is open source, secure, and
+          free, and it runs locally on your system without the need for internet
+          connectivity.
           <br />
-          The initial password is randomly generated and will be saved to a local
-          file.
-          <br />
-          recommends you set a password so that your password will only exist
-          in the program’s running memory, which is more secure.
-          <br />
-          With Passbox, you can:
+          Passbox uses AES encryption algorithm to safeguard your data, which is
+          then saved in a local file for easy access. The initial password is randomly
+          generated and stored in a local file, but we recommend setting up a unique
+          password to ensure maximum security.
         </p>
-        <ul role="list" class="space-y-4 py-6 text-gray-600 dark:text-gray-300">
+      </div>
+      <div class="relative md:w-6/12 md:pl-12">
+        <ul role="list" class="space-y-5 py-6 text-gray-600 dark:text-gray-300">
           <li class="space-x-2">
             <span class="font-semibold text-primary dark:text-gray-300">✓</span>
             <span
-              >Store your sensitive data for easy viewing and modification.</span
+              >Store your favorite URLs and frequently used file addresses for
+              easy access.</span
             >
           </li>
           <li class="space-x-2">
             <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span
-              >Store your favorite URLs and open them in a clean window.</span
-            >
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span
-              >Store your frequently used file addresses for easy opening.</span
-            >
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>Open URLs or files in the system tray.</span>
+            <span>Open URLs and files from the system tray.</span>
           </li>
           <li class="space-x-2">
             <span class="font-semibold text-primary dark:text-gray-300">✓</span>
@@ -56,79 +47,11 @@ import Feature from "../components/Feature.astro";
           </li>
           <li class="space-x-2">
             <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>Open URLs or files in the system tray.</span>
+            <span>Drag files to store links and names.</span>
           </li>
           <li class="space-x-2">
             <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>Drag files to store links and names of files.</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>
-              Save exported encrypted file to the cloud for data migration
-            </span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span
-              >You can store cloud disk links in Passbox and open them easily at
-              any time.</span
-            >
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>Import/export as browser bookmarks.</span>
-          </li>
-        </ul>
-      </div>
-      <div class="relative md:w-6/12 md:pl-12">
-        <p class="text-gray-700 dark:text-white" style="line-height: 2.5;">
-          Passbox 在本地运行，无需互联网。
-          <br />
-          Passbox 使用 AES 加密算法对数据进行加密，然后将其保存在本地文件中。
-          <br />
-          初始密码是随机生成的，会被保存到本地文件。
-          <br />
-          推荐您设置密码，这样您的密码只会存在于程序运行时内存中，更安全。
-          <br />
-          使用 passbox，您可以:
-        </p>
-        <ul role="list" class="space-y-4 py-6 text-gray-600 dark:text-gray-300">
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>存储您的敏感数据，方便快捷地查看和修改。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>存储您收藏的网址，在干净的窗口打开它。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>存储您常用的文件地址，方便您打开。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>在系统托盘中打开网址或文件。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>轻松愉快的使用工具网站。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>拖入文件存储文件的链接和名称。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>把导出的加密文件存入云盘，方便您在不同设备间同步数据。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>您可以把云盘链接存入 passbox，随时方便的打开它。</span>
-          </li>
-          <li class="space-x-2">
-            <span class="font-semibold text-primary dark:text-gray-300">✓</span>
-            <span>导入/导出为浏览器书签。</span>
+            <span>Import/export browser bookmarks.</span>
           </li>
         </ul>
       </div>
