--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -63,6 +63,7 @@ const { title } = Astro.props;
 
         main {
           flex: 1 0 auto;
+          border-top: 4px solid #6200ee;
         }
 
         footer {
