--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -28,12 +28,17 @@ const { src = "/passbox/202304302027.mp4" } = Astro.props;
           </a>
         </div>
       </div>
-      <video class="lg:block" controls src={src}></video>
+      <div class="flex flex-col items-center gap-8 md:items-end">
+        <video class="lg:block" controls src={src}></video>
+      </div>
     </div>
   </div>
 </section>
 
 <style lang="scss">
+  .hero {
+    margin-top: 6rem !important;
+  }
   .text-gradient {
     background: linear-gradient(
       315deg,
