--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,8 +23,7 @@ const currentYear = new Date().getFullYear();
   footer {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
-    margin-top: auto;
+    margin-top: 3rem;
     text-align: center;
     color: var(--gray-400);
     font-size: var(--text-sm);
