--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -7,11 +7,11 @@ import Icon from "./Icon.astro";
     <Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
     <h2>Free</h2>
     <p>
-      Open Source.
+      Open Source
       <br />
-      No data is collected.
+      No data is collected
       <br />
-      No internet connection required.
+      No internet connection required
     </p>
   </div>
   <div class="stack gap-2 lg:gap-4">
@@ -23,11 +23,11 @@ import Icon from "./Icon.astro";
     />
     <h2>Secure</h2>
     <p>
-      AES-CBC used to encrypt data.
+      AES-CBC used to encrypt data
       <br />
-      AES is considered unbreakable.
+      AES is considered unbreakable
       <br />
-      Your personal data remains yours alone.
+      Your personal data remains yours alone
     </p>
   </div>
   <div class="stack gap-2 lg:gap-4">
@@ -39,11 +39,11 @@ import Icon from "./Icon.astro";
     />
     <h2>Multifunctional</h2>
     <p>
-      Store Encrypted Manage Your Sensitive Data.
+      Store Encrypted Manage Your Sensitive Data
       <br />
-      Create a clean window to open the link.
+      Create a clean window to open the link
       <br />
-      Use tool websites easily and sweetly.
+      Use tool websites easily and sweetly
     </p>
   </div>
 </section>
