--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ const { src = "/passbox/202304302027.mp4" } = Astro.props;
         </div>
       </div>
       <div class="flex flex-col items-center gap-8 md:items-end">
-        <video class="lg:block" controls src={src}></video>
+        <video class="lg:block" controls aspect-ratio="16/9" src={src}></video>
       </div>
     </div>
   </div>
