--- a/src/components/PortfolioPreview.astro
+++ b/src/components/PortfolioPreview.astro
@@ -9,7 +9,7 @@ const { data, slug } = Astro.props.project;
 ---
 
 <div class="card">
-  <img src={data.img} loading="lazy" decoding="async" />
+  <video controls aspect-ratio="16/9" src={data.src}></video>
   {data.description && <span class="title">{data.description}</span>}
 </div>
 
@@ -17,7 +17,6 @@ const { data, slug } = Astro.props.project;
   .card {
     display: grid;
     grid-template: auto 1fr / auto 1fr;
-    height: 11rem;
     background: var(--gradient-subtle);
     border: 1px solid var(--gray-800);
     border-radius: 0.75rem;
@@ -42,7 +41,7 @@ const { data, slug } = Astro.props.project;
     border-radius: 0.375rem;
   }
 
-  img {
+  video {
     grid-area: 1 / 1 / 3 / 3;
     width: 100%;
     height: 100%;
@@ -51,7 +50,6 @@ const { data, slug } = Astro.props.project;
 
   @media (min-width: 50em) {
     .card {
-      height: 20.5rem;
       border-radius: 1.5rem;
     }
 
