--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Footer from "../components/Footer.astro";
 import Feature from "../components/Feature.astro";
 
 const projects = (await getCollection("work")).sort(
-  (a, b) => b.data.sort - a.data.sort
+  (a, b) => a.data.sort - b.data.sort
 );
 ---
 
