--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -10,7 +10,7 @@ const { src } = Astro.props;
 </div>
 
 <style lang="scss">
-  @use "../assets/scss/base/breakpoint" as *;
+  @use "../scss/base/breakpoint" as *;
 
   img {
     width: 100%;
