--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,13 +5,13 @@ import Icon from "./Icon.astro";
 <section class="box skills">
   <div class="stack gap-2 lg:gap-4">
     <Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-    <h2>Free</h2>
+    <h2>开源免费</h2>
     <p>
-      Open Source
+      没有数据被收集。
       <br />
-      No data is collected
+      没有任何互联网连接。
       <br />
-      No internet connection required
+      开放源代码，永久免费。
     </p>
   </div>
   <div class="stack gap-2 lg:gap-4">
@@ -21,13 +21,11 @@ import Icon from "./Icon.astro";
       size="2.5rem"
       gradient
     />
-    <h2>Secure</h2>
+    <h2>安全</h2>
     <p>
-      AES-CBC used to encrypt data
+      使用 AES 算法加密您录入的所有数据。
       <br />
-      AES is considered unbreakable
-      <br />
-      Your personal data remains yours alone
+      AES的安全性在目前的计算机体系结构下，没有任何有效的攻击方式。
     </p>
   </div>
   <div class="stack gap-2 lg:gap-4">
@@ -37,13 +35,13 @@ import Icon from "./Icon.astro";
       size="2.5rem"
       gradient
     />
-    <h2>Multifunctional</h2>
+    <h2>多功能</h2>
     <p>
-      Store Encrypted Manage Your Sensitive Data
+      通过系统托盘打开链接
       <br />
-      Create a clean window to open the link
+      在干净的窗口中打开链接
       <br />
-      Use tool websites easily and sweetly
+      轻松愉快的使用工具网站
     </p>
   </div>
 </section>
