--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import "../assets/scss/globals.scss";
+import "../scss/globals.scss";
 
 export interface Props {
   title: string;
@@ -44,8 +44,8 @@ const { title } = Astro.props;
         --primary-background: var(--primary-100);
         --neutral-background: var(--neutral-200);
         --_placeholder-bg: linear-gradient(transparent, transparent);
-        --bg-image-main: url("./assets/backgrounds/bg-main-light-800w.jpg");
-        --bg-image-main-curves: url("./assets/backgrounds/bg-main-light.svg");
+        --bg-image-main: url("assets/backgrounds/bg-main-light-800w.jpg");
+        --bg-image-main-curves: url("assets/backgrounds/bg-main-light.svg");
         --bg-image-subtle-1: var(--_placeholder-bg);
         --bg-image-subtle-2: var(--_placeholder-bg);
         --bg-image-footer: var(--_placeholder-bg);
@@ -58,29 +58,29 @@ const { title } = Astro.props;
       }
 
       :root.theme-dark {
-        --bg-image-main: url("./assets/backgrounds/bg-main-dark-800w.jpg");
-        --bg-image-main-curves: url("./assets/backgrounds/bg-main-dark.svg");
+        --bg-image-main: url("assets/backgrounds/bg-main-dark-800w.jpg");
+        --bg-image-main-curves: url("assets/backgrounds/bg-main-dark.svg");
         --bg-svg-blend-mode: darken;
         --bg-blend-mode: lighten;
       }
 
       :root.loaded {
-        --bg-image-subtle-1: url("./assets/backgrounds/bg-subtle-1-light-800w.jpg");
-        --bg-image-subtle-2: url("./assets/backgrounds/bg-subtle-2-light-800w.jpg");
-        --bg-image-footer: url("./assets/backgrounds/bg-footer-light-800w.jpg");
+        --bg-image-subtle-1: url("assets/backgrounds/bg-subtle-1-light-800w.jpg");
+        --bg-image-subtle-2: url("assets/backgrounds/bg-subtle-2-light-800w.jpg");
+        --bg-image-footer: url("assets/backgrounds/bg-footer-light-800w.jpg");
       }
 
       :root.loaded.theme-dark {
-        --bg-image-subtle-1: url("./assets/backgrounds/bg-subtle-1-dark-800w.jpg");
-        --bg-image-subtle-2: url("./assets/backgrounds/bg-subtle-2-dark-800w.jpg");
-        --bg-image-footer: url("./assets/backgrounds/bg-footer-dark-800w.jpg");
+        --bg-image-subtle-1: url("assets/backgrounds/bg-subtle-1-dark-800w.jpg");
+        --bg-image-subtle-2: url("assets/backgrounds/bg-subtle-2-dark-800w.jpg");
+        --bg-image-footer: url("assets/backgrounds/bg-footer-dark-800w.jpg");
       }
 
       .backgrounds {
         min-height: 100%;
         isolation: isolate;
         background:
-					/*noise*/ url("./assets/backgrounds/noise.png") top
+					/*noise*/ url("assets/backgrounds/noise.png") top
             center/220px repeat,
           /*footer*/ var(--bg-image-footer) bottom
             center/var(--bg-gradient-size) no-repeat,
