Organize directory structure

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from "astro-icon";
 
-const { src = "/passbox/202304302027.mp4" } = Astro.props;
+const { src = "/passbox/introduction/202304302027.mp4" } = Astro.props;
 ---
 
 <section class="hero my-6">
