--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,17 +41,17 @@ const projects = (await getCollection("work")).sort(
       <section class="my-12">
         <div class="container">
           <div class="grid grid-cols-1 gap-12 md:grid-cols-2 lg:grid-cols-3">
-            <Feature src="1.png" />
-            <Feature src="2.png" />
-            <Feature src="10.png" />
+            <Feature src="/passbox/introduction/1.png" />
+            <Feature src="/passbox/introduction/2.png" />
+            <Feature src="/passbox/introduction/10.png" />
 
-            <Feature src="4.png" />
-            <Feature src="5.png" />
-            <Feature src="6.png" />
+            <Feature src="/passbox/introduction/4.png" />
+            <Feature src="/passbox/introduction/5.png" />
+            <Feature src="/passbox/introduction/6.png" />
 
-            <Feature src="7.png" />
-            <Feature src="14.png" />
-            <Feature src="8.png" />
+            <Feature src="/passbox/introduction/7.png" />
+            <Feature src="/passbox/introduction/14.png" />
+            <Feature src="/passbox/introduction/8.png" />
           </div>
         </div>
         <Footer />
